--- a/material6.html
+++ b/material6.html
@@ -251,7 +251,7 @@
 
 
                         <hr class="sidebar-divider my-0">
-                        <h4>'La tmporalidad en la música':</h4>
+                        <h4>'La temporalidad en la música':</h4>
                         <p>Aquí un podcast sobre el texto:</p>
                         <svg xmlns="http://www.w3.org/2000/svg" version="1.0"  width="20" height="20" viewBox="0 0 75 75">
                             <path d="M39.389,13.769 L22.235,28.606 L6,28.606 L6,47.699 L21.989,47.699 L39.389,62.75 L39.389,13.769z"
