--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>IFM 2025</title>
+    <title>IFM 2026</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -36,7 +36,7 @@
                 <div class="sidebar-brand-icon" >
                     <img src="untref_blanco_logo.png" alt="MDN"  width= 80% height= 80%/>
                 </div>
-                <div class="sidebar-brand-text mx-3" id="title">IFM 2025</div>
+                <div class="sidebar-brand-text mx-3" id="title">IFM 2026</div>
             </a>
 
 
@@ -58,10 +58,11 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="https://drive.google.com/file/d/13OyHV6gR2EZy2M8pwzD_ic5leaVMk4B7/view?usp=drive_link" target="_blank">Condiciones de ingreso</a>
-                        <a class="collapse-item" href="https://drive.google.com/file/d/1_8wQtUrxs25PwICxzP6Acv5vfveQfRa5/view?usp=drive_link" target="_blank">Programa de la materia</a>
-                        <a class="collapse-item" href="https://drive.google.com/file/d/1WWJluajiRyr-w9VgWxzX-7jgPlL-_Yef/view?usp=sharing" target="_blank">Bibliografía obligatoria</a>
-                        <a class="collapse-item" href="https://drive.google.com/drive/folders/1hM2FgRV3V1vZ1r22TgREptLlwJBf7t9g?usp=drive_link" target="_blank">Material obligatorio</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/1ly34P_3AmJ4v60GdJYesOC1Z2fGH3_Co/view?usp=sharing" target="_blank">Condiciones generales</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/15JnsKh4wOWNwobeUXuX_YWQ1RUPfisp5/view?usp=sharing" target="_blank">Condiciones específicas</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/1PYceUou-T0ssjcB4bCR5haQIQIJtHgBZ/view?usp=sharing" target="_blank">Programa de la materia</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/13plN3K0eflkBTY148WE0qpib045d6xFE/view?usp=drive_link" target="_blank">Bibliografía obligatoria</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/1Fb7axJQ_fS4sWEoRbceaxbUadz0rR54E/view?usp=sharing" target="_blank">Cuadernillo IFM 2026</a>
                     </div>
                 </div>
             </li>
@@ -76,11 +77,11 @@
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="https://drive.google.com/file/d/1exZLbycFMN00-WnCjCOLvQFBJ2berDOl/view?usp=sharing" target="_blank">Cronograma IFM 2025</a>
-                        <a class="collapse-item" href="https://us05web.zoom.us/j/3898929650?pwd=gCPHWotBjMwSRcu88IclJsrYx5VrIX.1" target="_blank">Link Zoom 1 [AC2025]</a>
-                        <a class="collapse-item" href="https://us05web.zoom.us/j/5941514513?pwd=SCu4SMSehaMPy9ZWrlEEZmHBqG9lto.1" target="_blank">Link Zoom 2 [AC2025]</a>
-                        <a class="collapse-item" href="https://classroom.google.com/c/Njg3MzY3MDE1MzY2?cjc=ausl4xv" target="_blank">Classroom</a>
-                        <a class="collapse-item" href="https://drive.google.com/file/d/1RYsI0ZNutKj8LAb0_xCQT_Cp-VQtH4LY/view?usp=drive_link" target="_blank">Calendario académico</a>
+                        <!-- <a class="collapse-item" href="https://drive.google.com/file/d/1exZLbycFMN00-WnCjCOLvQFBJ2berDOl/view?usp=sharing" target="_blank">Cronograma IFM 2025</a> -->
+                        <!-- <a class="collapse-item" href="https://us05web.zoom.us/j/3898929650?pwd=gCPHWotBjMwSRcu88IclJsrYx5VrIX.1" target="_blank">Link Zoom 1 [AC2025]</a> -->
+                        <!-- <a class="collapse-item" href="https://us05web.zoom.us/j/5941514513?pwd=SCu4SMSehaMPy9ZWrlEEZmHBqG9lto.1" target="_blank">Link Zoom 2 [AC2025]</a> -->
+                        <a class="collapse-item" href="https://classroom.google.com/c/ODM3NDI5ODYwNTYw?cjc=mrqmk5na" target="_blank">Classroom</a>
+                        <!-- <a class="collapse-item" href="https://drive.google.com/file/d/1RYsI0ZNutKj8LAb0_xCQT_Cp-VQtH4LY/view?usp=drive_link" target="_blank">Calendario académico</a> -->
                     </div>
                 </div>
             </li>
@@ -110,7 +111,7 @@
             </li>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages2"
                     aria-expanded="true" aria-controls="collapsePages2">
                     <i class="fas fa-fw fa-folder"></i>
@@ -123,10 +124,10 @@
                         <a class="collapse-item" href="ejercicios2.html">Ejercicios sugeridos</a>
                     </div>
                 </div>
-            </li>
+            </li> -->
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages3"
                     aria-expanded="true" aria-controls="collapsePages3">
                     <i class="fas fa-fw fa-folder"></i>
@@ -139,11 +140,11 @@
                         <a class="collapse-item" href="ejercicios3.html">Ejercicios sugeridos</a>
                     </div>
                 </div>
-            </li>
+            </li> -->
 
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages5"
                     aria-expanded="true" aria-controls="collapsePages5">
                     <i class="fas fa-fw fa-folder"></i>
@@ -156,10 +157,10 @@
                         <a class="collapse-item" href="ejercicios5.html">Ejercicios sugeridos</a>
                     </div>
                 </div>
-            </li>
+            </li> -->
 
                        <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages4"
                     aria-expanded="true" aria-controls="collapsePages4">
                     <i class="fas fa-fw fa-folder"></i>
@@ -172,10 +173,10 @@
                         <a class="collapse-item" href="ejercicios4.html">Ejercicios sugeridos</a>
                     </div>
                 </div>
-            </li>
+            </li> -->
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages6"
                     aria-expanded="true" aria-controls="collapsePages6">
                     <i class="fas fa-fw fa-folder"></i>
@@ -188,7 +189,7 @@
                         <a class="collapse-item" href="ejercicios6.html">Ejercicios sugeridos</a>
                     </div>
                 </div>
-            </li>
+            </li> -->
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
@@ -211,7 +212,7 @@
                 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
                     <a href="index.html"> 
-                        <h3>Introducción a los Fundamentos de la Música - Comisión 21</h3>
+                        <h3>Introducción a los Fundamentos de la Música - Comisión 20</h3>
                     </a>
 
                 </nav>
@@ -238,7 +239,7 @@
             <footer class="sticky-footer bg-white" id="footer">
                 <div class="container my-auto">
                     <div class="text-center my-auto">
-                        <h6>Introducción a los Fundamentos de la Música | Comisión 21  - Cátedra: Crespo | Dominguez | Di Paola</h6><h7>Universidad Nacional de Tres de Febrero</h7>    
+                        <h6>Introducción a los Fundamentos de la Música | Comisión 20  - Cátedra: Crespo | Dominguez | Di Paola</h6><h7>Universidad Nacional de Tres de Febrero</h7>    
                     </div>
                 </div>
             </footer>
