--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <!-- <a class="collapse-item" href="https://drive.google.com/file/d/1exZLbycFMN00-WnCjCOLvQFBJ2berDOl/view?usp=sharing" target="_blank">Cronograma IFM 2025</a> -->
-                        <!-- <a class="collapse-item" href="https://us05web.zoom.us/j/3898929650?pwd=gCPHWotBjMwSRcu88IclJsrYx5VrIX.1" target="_blank">Link Zoom 1 [AC2025]</a> -->
-                        <!-- <a class="collapse-item" href="https://us05web.zoom.us/j/5941514513?pwd=SCu4SMSehaMPy9ZWrlEEZmHBqG9lto.1" target="_blank">Link Zoom 2 [AC2025]</a> -->
+                        <!-- <a class="collapse-item" href="https://drive.google.com/file/d/1exZLbycFMN00-WnCjCOLvQFBJ2berDOl/view?usp=sharing" target="_blank">Cronograma IFM 2026</a> -->
+                        <!-- <a class="collapse-item" href="https://us05web.zoom.us/j/3898929650?pwd=gCPHWotBjMwSRcu88IclJsrYx5VrIX.1" target="_blank">Link Zoom 1 [AC2026]</a> -->
+                        <!-- <a class="collapse-item" href="https://us05web.zoom.us/j/5941514513?pwd=SCu4SMSehaMPy9ZWrlEEZmHBqG9lto.1" target="_blank">Link Zoom 2 [AC2026]</a> -->
                         <a class="collapse-item" href="https://classroom.google.com/c/ODM3NDI5ODYwNTYw?cjc=mrqmk5na" target="_blank">Classroom</a>
-                        <!-- <a class="collapse-item" href="https://drive.google.com/file/d/1RYsI0ZNutKj8LAb0_xCQT_Cp-VQtH4LY/view?usp=drive_link" target="_blank">Calendario académico</a> -->
+                        <a class="collapse-item" href="https://untref.edu.ar/calendario-academico" target="_blank">Calendario académico</a>
                     </div>
                 </div>
             </li>
