--- a/ejercicios2.html
+++ b/ejercicios2.html
@@ -66,23 +66,24 @@
                 </div>
             </li>
 
-            <!-- Nav Item - Utilities Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span>Información importante</span>
-                </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <!-- <a class="collapse-item" href="https://drive.google.com/file/d/1lUwh_5idDEw9M5AWRzCywhZ97tPvF5Hd/view?usp=drive_link" target="_blank">Cronograma IFM 2026</a> -->
-                        <!-- <a class="collapse-item" href="https://us05web.zoom.us/j/3898929650?pwd=gCPHWotBjMwSRcu88IclJsrYx5VrIX.1" target="_blank">Link Zoom 1 [AC2026]</a> -->
-                        <!-- <a class="collapse-item" href="https://us05web.zoom.us/j/5941514513?pwd=SCu4SMSehaMPy9ZWrlEEZmHBqG9lto.1" target="_blank">Link Zoom 2 [AC2026]</a> -->
-                        <a class="collapse-item" href="https://classroom.google.com/c/ODM3NDI5ODYwNTYw?cjc=mrqmk5na" target="_blank">Classroom</a>
-                        <a class="collapse-item" href="https://untref.edu.ar/calendario-academico" target="_blank">Calendario académico</a>
+        <!-- Nav Item - Utilities Collapse Menu -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+                aria-expanded="true" aria-controls="collapseUtilities">
+                <i class="fas fa-fw fa-wrench"></i>
+                <span>Información importante</span>
+            </a>
+            <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
+                data-parent="#accordionSidebar">
+                <div class="bg-white py-2 collapse-inner rounded">
+                    <a class="collapse-item" href="https://docs.google.com/spreadsheets/d/1_hAt2Wg0kKO5Y_1j7HN-dym5O4JJTk9rl0rgbLbAY6I/edit?usp=sharing" target="_blank">Cronograma IFM 2026</a>
+                    <a class="collapse-item" href="https://us05web.zoom.us/j/3898929650?pwd=gCPHWotBjMwSRcu88IclJsrYx5VrIX.1" target="_blank">Link Zoom 1 [AC2026]</a>
+                    <a class="collapse-item" href="https://us05web.zoom.us/j/5941514513?pwd=SCu4SMSehaMPy9ZWrlEEZmHBqG9lto.1" target="_blank">Link Zoom 2 [AC2026]</a>
+                    <a class="collapse-item" href="https://classroom.google.com/c/ODM3NDI5ODYwNTYw?cjc=mrqmk5na" target="_blank">Classroom</a>
+                    <a class="collapse-item" href="https://untref.edu.ar/calendario-academico" target="_blank">Calendario académico</a>
                 </div>
-            </li>
+            </div>
+        </li>
 
             <!-- Divider -->
             <hr class="sidebar-divider">
