--- a/biblio1.html
+++ b/biblio1.html
@@ -111,7 +111,7 @@
     </li>
 
     <!-- Nav Item - Pages Collapse Menu -->
-    <!-- <li class="nav-item">
+    <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages2"
             aria-expanded="true" aria-controls="collapsePages2">
             <i class="fas fa-fw fa-folder"></i>
@@ -124,7 +124,7 @@
                 <a class="collapse-item" href="ejercicios2.html">Ejercicios sugeridos</a>
             </div>
         </div>
-    </li> -->
+    </li>
 
     <!-- Nav Item - Pages Collapse Menu -->
     <!-- <li class="nav-item">
