--- a/biblio2.html
+++ b/biblio2.html
@@ -126,7 +126,7 @@
             </li>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages3"
                     aria-expanded="true" aria-controls="collapsePages3">
                     <i class="fas fa-fw fa-folder"></i>
@@ -139,11 +139,11 @@
                         <a class="collapse-item" href="ejercicios3.html">Ejercicios sugeridos</a>
                     </div>
                 </div>
-            </li>
+            </li> -->
 
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages5"
                     aria-expanded="true" aria-controls="collapsePages5">
                     <i class="fas fa-fw fa-folder"></i>
@@ -156,10 +156,10 @@
                         <a class="collapse-item" href="ejercicios5.html">Ejercicios sugeridos</a>
                     </div>
                 </div>
-            </li>
+            </li> -->
 
                        <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages4"
                     aria-expanded="true" aria-controls="collapsePages4">
                     <i class="fas fa-fw fa-folder"></i>
@@ -172,10 +172,10 @@
                         <a class="collapse-item" href="ejercicios4.html">Ejercicios sugeridos</a>
                     </div>
                 </div>
-            </li>
+            </li> -->
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages6"
                     aria-expanded="true" aria-controls="collapsePages6">
                     <i class="fas fa-fw fa-folder"></i>
@@ -188,7 +188,7 @@
                         <a class="collapse-item" href="ejercicios6.html">Ejercicios sugeridos</a>
                     </div>
                 </div>
-            </li>
+            </li> -->
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
