--- a/biblio2.html
+++ b/biblio2.html
@@ -225,10 +225,12 @@
                     <h3>SEMINARIO II</h3>
                     <h5>Introducción al ritmo</h5>
                     <hr class="sidebar-divider my-0">
+                    <h6>*los números de páginas siempre refieren a la numeración inferior derecha</h6>
                     <p>- Texto 8 (Pereira Ghiena, Alejandro y otros) La estructura métrica - páginas 47 a 54</p>
                     <p>- Texto 9 (Jacquier, María de la Paz y otros) La organización rítmica de la música -
                     páginas 55 a 72</p>
-                    <p>- Material de cátedra: INTRODUCCIÓN AL RITMO - archivo adjunto aparte</p>
+                    <p>- Material de cátedra: INTRODUCCIÓN AL RITMO - páginas 260 a 279</p>
+
 
                    
                 </div>
