--- a/ejercicios2.html
+++ b/ejercicios2.html
@@ -226,8 +226,8 @@
                     <h3>SEMINARIO II</h3>
                     <h5>Introducción al ritmo</h5>
                     <hr class="sidebar-divider my-0">
-                    <iframe id="form" src="https://docs.google.com/forms/d/e/1FAIpQLSc_MSS1cT9_9-EzFTX8aHw7VOcDavvZluCtXmmlMD2VkvjvBA/viewform?embedded=true" width="640" height="8922" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
-                    <p> ----> <a href='https://docs.google.com/forms/d/e/1FAIpQLSc_MSS1cT9_9-EzFTX8aHw7VOcDavvZluCtXmmlMD2VkvjvBA/viewform?embedded=true'>FORMULARIO DE EJERCITACIÓN</a></p>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfrfoLM5PiCU8zSMAzl4GT6G9H587cWsCAXboqSvH67-hMyqw/viewform?embedded=true" width="640" height="8922" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+                    <p> ----> <a href='https://docs.google.com/forms/d/e/1FAIpQLSfrfoLM5PiCU8zSMAzl4GT6G9H587cWsCAXboqSvH67-hMyqw/viewform?usp=publish-editor'>FORMULARIO DE EJERCITACIÓN</a></p>
 
                    
                     
