corrijo tp ritmo i#

--- a/ejercicios2.html
+++ b/ejercicios2.html
@@ -120,7 +120,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="biblio2.html">Bibliografía obligatoria</a>
                         <a class="collapse-item" href="material2.html">Materiales</a>
-                        <a class="collapse-item" href="ejercicios2.html">Ejercicios sugeridos</a>
+                        <a class="collapse-item" href="ejercicios2.html">TP RITMO</a>
                     </div>
                 </div>
             </li>
@@ -227,7 +227,7 @@
                     <h5>Introducción al ritmo</h5>
                     <hr class="sidebar-divider my-0">
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfrfoLM5PiCU8zSMAzl4GT6G9H587cWsCAXboqSvH67-hMyqw/viewform?embedded=true" width="640" height="8922" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
-                    <p> ----> <a href='https://docs.google.com/forms/d/e/1FAIpQLSfrfoLM5PiCU8zSMAzl4GT6G9H587cWsCAXboqSvH67-hMyqw/viewform?usp=publish-editor'>FORMULARIO DE EJERCITACIÓN</a></p>
+                    <p> ----> <a href='https://docs.google.com/forms/d/e/1FAIpQLSfrfoLM5PiCU8zSMAzl4GT6G9H587cWsCAXboqSvH67-hMyqw/viewform?usp=publish-editor'>LINK AL FORMULARIO DE EJERCITACIÓN</a></p>
 
                    
                     
