--- a/biblio1.html
+++ b/biblio1.html
@@ -105,7 +105,7 @@
             <div class="bg-white py-2 collapse-inner rounded">
                 <a class="collapse-item" href="biblio1.html">Bibliografía obligatoria</a>
                 <a class="collapse-item" href="material1.html">Materiales</a>
-                <!-- <a class="collapse-item" href="ejercicios1.html">Ejercicios sugeridos</a> -->
+                <!-- <a class="collapse-item" href="ejercicios1.html">TP ALTURA</a> -->
             </div>
         </div>
     </li>
@@ -121,7 +121,7 @@
             <div class="bg-white py-2 collapse-inner rounded">
                 <a class="collapse-item" href="biblio2.html">Bibliografía obligatoria</a>
                 <a class="collapse-item" href="material2.html">Materiales</a>
-                <a class="collapse-item" href="ejercicios2.html">Ejercicios sugeridos</a>
+                <a class="collapse-item" href="ejercicios2.html">TP RITMO</a>
             </div>
         </div>
     </li>
