--- a/material2.html
+++ b/material2.html
@@ -58,33 +58,35 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="https://drive.google.com/file/d/13OyHV6gR2EZy2M8pwzD_ic5leaVMk4B7/view?usp=drive_link" target="_blank">Condiciones de ingreso</a>
-                        <a class="collapse-item" href="https://drive.google.com/file/d/1_8wQtUrxs25PwICxzP6Acv5vfveQfRa5/view?usp=drive_link" target="_blank">Programa de la materia</a>
-                        <a class="collapse-item" href="https://drive.google.com/file/d/1WWJluajiRyr-w9VgWxzX-7jgPlL-_Yef/view?usp=sharing" target="_blank">Bibliografía obligatoria</a>
-                        <a class="collapse-item" href="https://drive.google.com/drive/folders/1hM2FgRV3V1vZ1r22TgREptLlwJBf7t9g?usp=drive_link" target="_blank">Material obligatorio</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/1ly34P_3AmJ4v60GdJYesOC1Z2fGH3_Co/view?usp=sharing" target="_blank">Condiciones generales</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/15JnsKh4wOWNwobeUXuX_YWQ1RUPfisp5/view?usp=sharing" target="_blank">Condiciones específicas</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/1PYceUou-T0ssjcB4bCR5haQIQIJtHgBZ/view?usp=sharing" target="_blank">Programa de la materia</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/13plN3K0eflkBTY148WE0qpib045d6xFE/view?usp=drive_link" target="_blank">Bibliografía obligatoria</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/1Fb7axJQ_fS4sWEoRbceaxbUadz0rR54E/view?usp=sharing" target="_blank">Cuadernillo IFM 2026</a>
+                    </div>
+                </div>
+            </li>
+        
+            <!-- Nav Item - Utilities Collapse Menu -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+                    aria-expanded="true" aria-controls="collapseUtilities">
+                    <i class="fas fa-fw fa-wrench"></i>
+                    <span>Información importante</span>
+                </a>
+                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
+                    data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="https://docs.google.com/spreadsheets/d/1_hAt2Wg0kKO5Y_1j7HN-dym5O4JJTk9rl0rgbLbAY6I/edit?usp=sharing" target="_blank">Cronograma IFM 2026</a>
+                        <a class="collapse-item" href="https://us05web.zoom.us/j/3898929650?pwd=gCPHWotBjMwSRcu88IclJsrYx5VrIX.1" target="_blank">Link Zoom 1 [AC2026]</a>
+                        <a class="collapse-item" href="https://us05web.zoom.us/j/5941514513?pwd=SCu4SMSehaMPy9ZWrlEEZmHBqG9lto.1" target="_blank">Link Zoom 2 [AC2026]</a>
+                        <a class="collapse-item" href="https://classroom.google.com/c/ODM3NDI5ODYwNTYw?cjc=mrqmk5na" target="_blank">Classroom</a>
+                        <a class="collapse-item" href="https://untref.edu.ar/calendario-academico" target="_blank">Calendario académico</a>
                     </div>
                 </div>
             </li>
 
-        <!-- Nav Item - Utilities Collapse Menu -->
-        <li class="nav-item">
-            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                aria-expanded="true" aria-controls="collapseUtilities">
-                <i class="fas fa-fw fa-wrench"></i>
-                <span>Información importante</span>
-            </a>
-            <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                data-parent="#accordionSidebar">
-                <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="https://docs.google.com/spreadsheets/d/1_hAt2Wg0kKO5Y_1j7HN-dym5O4JJTk9rl0rgbLbAY6I/edit?usp=sharing" target="_blank">Cronograma IFM 2026</a>
-                    <a class="collapse-item" href="https://us05web.zoom.us/j/3898929650?pwd=gCPHWotBjMwSRcu88IclJsrYx5VrIX.1" target="_blank">Link Zoom 1 [AC2026]</a>
-                    <a class="collapse-item" href="https://us05web.zoom.us/j/5941514513?pwd=SCu4SMSehaMPy9ZWrlEEZmHBqG9lto.1" target="_blank">Link Zoom 2 [AC2026]</a>
-                    <a class="collapse-item" href="https://classroom.google.com/c/ODM3NDI5ODYwNTYw?cjc=mrqmk5na" target="_blank">Classroom</a>
-                    <a class="collapse-item" href="https://untref.edu.ar/calendario-academico" target="_blank">Calendario académico</a>
-                </div>
-            </div>
-        </li>
-
+            
             <!-- Divider -->
             <hr class="sidebar-divider">
 
