--- a/ejercicios2.html
+++ b/ejercicios2.html
@@ -93,34 +93,38 @@
                 Seminarios
             </div>
             
-            <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-                    aria-expanded="true" aria-controls="collapsePages">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Seminario I</span>
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
+                    aria-expanded="true" aria-controls="collapseTwo">
+                    <i class="fas fa-fw fa-cog"></i>
+                    <span>Archivos generales</span>
                 </a>
-                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="biblio1.html">Bibliografía obligatoria</a>
-                        <a class="collapse-item" href="material1.html">Materiales</a>
-                        <!-- <a class="collapse-item" href="ejercicios1.html">Ejercicios sugeridos</a> -->
+                        <a class="collapse-item" href="https://drive.google.com/file/d/1ly34P_3AmJ4v60GdJYesOC1Z2fGH3_Co/view?usp=sharing" target="_blank">Condiciones generales</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/15JnsKh4wOWNwobeUXuX_YWQ1RUPfisp5/view?usp=sharing" target="_blank">Condiciones específicas</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/1PYceUou-T0ssjcB4bCR5haQIQIJtHgBZ/view?usp=sharing" target="_blank">Programa de la materia</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/13plN3K0eflkBTY148WE0qpib045d6xFE/view?usp=drive_link" target="_blank">Bibliografía obligatoria</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/1Fb7axJQ_fS4sWEoRbceaxbUadz0rR54E/view?usp=sharing" target="_blank">Cuadernillo IFM 2026</a>
                     </div>
                 </div>
             </li>
-
-            <!-- Nav Item - Pages Collapse Menu -->
+        
+            <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages2"
-                    aria-expanded="true" aria-controls="collapsePages2">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Seminario II</span>
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+                    aria-expanded="true" aria-controls="collapseUtilities">
+                    <i class="fas fa-fw fa-wrench"></i>
+                    <span>Información importante</span>
                 </a>
-                <div id="collapsePages2" class="collapse" aria-labelledby="headingPages2" data-parent="#accordionSidebar">
+                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
+                    data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="biblio2.html">Bibliografía obligatoria</a>
-                        <a class="collapse-item" href="material2.html">Materiales</a>
-                        <a class="collapse-item" href="ejercicios2.html">TP RITMO</a>
+                        <a class="collapse-item" href="https://docs.google.com/spreadsheets/d/1_hAt2Wg0kKO5Y_1j7HN-dym5O4JJTk9rl0rgbLbAY6I/edit?usp=sharing" target="_blank">Cronograma IFM 2026</a>
+                        <a class="collapse-item" href="https://us05web.zoom.us/j/3898929650?pwd=gCPHWotBjMwSRcu88IclJsrYx5VrIX.1" target="_blank">Link Zoom 1 [AC2026]</a>
+                        <a class="collapse-item" href="https://us05web.zoom.us/j/5941514513?pwd=SCu4SMSehaMPy9ZWrlEEZmHBqG9lto.1" target="_blank">Link Zoom 2 [AC2026]</a>
+                        <a class="collapse-item" href="https://classroom.google.com/c/ODM3NDI5ODYwNTYw?cjc=mrqmk5na" target="_blank">Classroom</a>
+                        <a class="collapse-item" href="https://untref.edu.ar/calendario-academico" target="_blank">Calendario académico</a>
                     </div>
                 </div>
             </li>
