--- a/biblio2.html
+++ b/biblio2.html
@@ -25,8 +25,8 @@
 
 <body id="page-top">
 
-    <!-- Page Wrapper -->
-    <div id="wrapper">
+     <!-- Page Wrapper -->
+     <div id="wrapper">
 
         <!-- Sidebar -->
         <ul class="navbar-nav bg-gradient-for-left-menu sidebar sidebar-dark accordion" id="accordionSidebar">
@@ -58,10 +58,11 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="https://drive.google.com/file/d/13OyHV6gR2EZy2M8pwzD_ic5leaVMk4B7/view?usp=drive_link" target="_blank">Condiciones de ingreso</a>
-                        <a class="collapse-item" href="https://drive.google.com/file/d/1_8wQtUrxs25PwICxzP6Acv5vfveQfRa5/view?usp=drive_link" target="_blank">Programa de la materia</a>
-                        <a class="collapse-item" href="https://drive.google.com/file/d/1WWJluajiRyr-w9VgWxzX-7jgPlL-_Yef/view?usp=sharing" target="_blank">Bibliografía obligatoria</a>
-                        <a class="collapse-item" href="https://drive.google.com/drive/folders/1hM2FgRV3V1vZ1r22TgREptLlwJBf7t9g?usp=drive_link" target="_blank">Material obligatorio</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/1ly34P_3AmJ4v60GdJYesOC1Z2fGH3_Co/view?usp=sharing" target="_blank">Condiciones generales</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/15JnsKh4wOWNwobeUXuX_YWQ1RUPfisp5/view?usp=sharing" target="_blank">Condiciones específicas</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/1PYceUou-T0ssjcB4bCR5haQIQIJtHgBZ/view?usp=sharing" target="_blank">Programa de la materia</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/13plN3K0eflkBTY148WE0qpib045d6xFE/view?usp=drive_link" target="_blank">Bibliografía obligatoria</a>
+                        <a class="collapse-item" href="https://drive.google.com/file/d/1Fb7axJQ_fS4sWEoRbceaxbUadz0rR54E/view?usp=sharing" target="_blank">Cuadernillo IFM 2026</a>
                     </div>
                 </div>
             </li>
@@ -123,7 +124,7 @@
                         <a class="collapse-item" href="ejercicios2.html">TP RITMO</a>
                     </div>
                 </div>
-            </li>
+            </li> 
 
             <!-- Nav Item - Pages Collapse Menu -->
             <!-- <li class="nav-item">
@@ -206,8 +207,6 @@
 
             <!-- Main Content -->
             <div id="content">
-
-                
 
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
